--- a/templates/livro/criar_autor.html
+++ b/templates/livro/criar_autor.html
@@ -3,9 +3,9 @@
 {% block title %}Dashboard - Bem Vindos a Livraria Duna {% endblock title %}
 {% load static %}
 {% block content %}
-<section>
+<section class="content">
     <div class="col-md-12 col-lg-12 col-xl-12">
-        <div class="card">
+        <div class="card row">
             <div class="card-header">
                 <strong class="card-title">Criar Autor de Livros </strong>
             </div>
