--- a/templates/base_adm.html
+++ b/templates/base_adm.html
@@ -122,11 +122,21 @@
                     <li class="menu-title">Empréstimos</li><!-- /.menu-title -->
                     <li class="menu-item-has-children dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false"> <i class="menu-icon fa fa-glass"></i>Meus Espréstimos</a>
+                            aria-expanded="false"> <i class="menu-icon fa fa-glass"></i>Meus Empréstimos</a>
                         <ul class="sub-menu children dropdown-menu">
                             <li><i class="menu-icon fa fa-sign-in"></i><a href="page-login.html">Login</a></li>
                             <li><i class="menu-icon fa fa-sign-in"></i><a href="page-register.html">Register</a></li>
                             <li><i class="menu-icon fa fa-paper-plane"></i><a href="pages-forget.html">Forget Pass</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="menu-title">Produtos</li><!-- /.menu-title -->
+                    <li class="menu-item-has-children dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false"> <i class="menu-icon fa fa-glass"></i>Meus Produtos</a>
+                        <ul class="sub-menu children dropdown-menu">
+                            <li><i class="menu-icon fa fa-sign-in"></i><a href="page-login.html">Novo Produto</a></li>
+                            <li><i class="menu-icon fa fa-sign-in"></i><a href="{% url 'products:list' %}">Listar Produtos</a></li>
                             </li>
                         </ul>
                     </li>
