--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 {% load crispy_forms_tags %}
 
 <!doctype html>
@@ -21,8 +23,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lykmapipo/themify-icons@0.1.2/css/themify-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pixeden-stroke-7-icon@1.2.3/pe-icon-7-stroke/dist/pe-icon-7-stroke.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.2.0/css/flag-icon.min.css">
-    <link rel="stylesheet" href="assets/css/cs-skin-elastic.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="{% static 'assets/css/cs-skin-elastic.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
 
@@ -42,26 +44,17 @@
                     <form method="post">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label>Email address</label>
+                            <label>Email: </label>
                             <!-- <input type="email" class="form-control" placeholder="Email"> -->
                             {{ form|crispy }}
                         </div>
                         <div class="form-group">
-                            <label>Password</label>
+                            <label>Senha: </label>
                             <!-- <input type="password" class="form-control" placeholder="Password"> -->
                             {{ form|crispy }}
                         </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> Remember Me
-                            </label>
-                            <label class="pull-right">
-                                <a href="#">Forgotten Password?</a>
-                            </label>
-
-                        </div>
                         
-                        <button type="submit" class="btn btn-success btn-flat m-b-30 m-t-30">Sign in</button>
+                        <button type="submit" class="btn btn-success btn-flat m-b-30 m-t-30">Entrar</button>
                         <div class="social-login-content">
                             <div class="social-button">
                                 <button type="button" class="btn social facebook btn-flat btn-addon mb-3"><i class="ti-facebook"></i>Sign in with facebook</button>
@@ -69,7 +62,7 @@
                             </div>
                         </div>
                         <div class="register-link m-t-15 text-center">
-                            <p>Don't have account ? <a href="#"> Sign Up Here</a></p>
+                            <p>Ainda não tem uma conta ? <a href="#"> Clique Aqui</a></p>
                         </div>
                     </form>
                 </div>
